Return error messages when reloading configuration